dev: hidden update by id